resources/sass/app.scss
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
/* purgecss start ignore */
@tailwind base;
@tailwind components;
/* purgecss end ignore */
@tailwind utilities;

html, body {
    margin: 0;
    height: 100%;
    overflow: hidden
}

/* Sticky footer styles
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
    font-family: "Roboto", sans-serif;
}

body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 40px;
    line-height: 40px; /* Vertically center the text there */
    background-color: #f5f5f5;
}

select optgroup {
    color: #000;
    font-style: normal;
    font-weight: normal;
}

.w-300 {
    width: 300px;
}

.h-250 {
    height: 250px;
}

.vote-average {
    margin-right: 20px;
}

